refactor: reformat and refactor code